--- a/music.html
+++ b/music.html
@@ -116,6 +116,21 @@
                   </div>
                   <i class="fa-solid fa-ellipsis-vertical"></i>
                 </li>
+                <li>
+                  <div>
+                    <img
+                      src="https://w.namu.la/s/e85e012aaf40d3518f83f816337586eda71c8a1575a9ed6f08bd722d5039305195de463ddecb550de36c209c2a251e461e54bf5a760e13b1a1ec8126946d4e108fcaa524be6dc8b205ef078329f56ad94c6ded90d8c94661fe0e676912cc760a796fb14b635aa61cce9d165bf8d5b7c5"
+                    />
+                    <div class="music-content__singer-song-play">
+                      <i class="fa-solid fa-play fa-xl"></i>
+                    </div>
+                  </div>
+                  <div>
+                    <span>Isegye Idol</span>
+                    <span>ISEGYE IDOL CYPHER</span>
+                  </div>
+                  <i class="fa-solid fa-ellipsis-vertical"></i>
+                </li>
               </ul>
             </div>
             <div class="music-content__singer-song-list">
