--- a/chatting.html
+++ b/chatting.html
@@ -80,7 +80,7 @@
     </footer>
 
     <div class="no-mobile">
-      <img src="clone-page-screenshot/no.jpg" alt="" />
+      <img src="img/ine-size-alert.gif" alt="" />
       <p>
         해당페이지는 모바일 최적화 페이지입니다. <br />
         화면을 줄여주세요.
