--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Isegye Idol Talk</title>
   </head>
-  <body id="login">
+  <body>
+    <div class="bg" id="login"></div>
     <div class="status-bar">
       <!-- 폰으로 접속시 사라지는 것도 고려 -->
       <div class="status-bar__column">
