--- a/chats.html
+++ b/chats.html
@@ -8,6 +8,7 @@
     <title>Isegye Idol Talk</title>
   </head>
   <body>
+    <div class="bg"></div>
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
