--- a/setting.html
+++ b/setting.html
@@ -8,6 +8,7 @@
     <title>Isegye Idol Talk</title>
   </head>
   <body>
+    <div class="bg"></div>
     <div class="status-bar">
       <!-- 폰으로 접속시 사라지는 것도 고려 -->
       <div class="status-bar__column">
