fix: 소스 위치 변경

--- a/index.html
+++ b/index.html
@@ -1,64 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/screens/login.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Isegye Idol Talk</title>
+    <title>Document</title>
   </head>
   <body>
-    <div class="bg" id="login"></div>
-    <div class="status-bar">
-      <!-- 폰으로 접속시 사라지는 것도 고려 -->
-      <div class="status-bar__column">
-        <span>No Service</span>
-        <i class="fa-solid fa-wifi"></i>
-      </div>
-      <div class="status-bar__column">
-        <span>15:49</span>
-        <!-- JS를 배우고나서 리얼 타임으로 변경도 고려 -->
-      </div>
-      <div class="status-bar__column">
-        <i class="fa-solid fa-lock fa-xs"></i>
-        <span>10%</span>
-        <i class="fa-solid fa-battery-quarter fa-lg"></i>
-        <i class="fa-solid fa-bolt fa-xs"></i>
-      </div>
-    </div>
-
-    <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Metaverse</h1>
-      <p class="welcome-header__text">Log in with your Name.</p>
-    </header>
-
-    <form action="friends.html" method="get" id="login-form">
-      <input
-        name="username"
-        type="text"
-        required
-        placeholder="name"
-        autocomplete="off"
-      />
-      <!--<input name="password" type="password" placeholder="Password" />-->
-      <input type="submit" value="Log In" />
-      <!--<a href="#">Find Mokoko Account or Password</a>-->
-    </form>
-
-    <div class="no-mobile">
-      <img src="img/ine-size-alert.gif" alt="" />
-      <p>
-        해당페이지는 모바일 최적화 페이지입니다. <br />
-        화면을 줄여주세요.
-      </p>
-    </div>
-
-    <script
-      src="https://kit.fontawesome.com/a4852596ef.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/time.js"></script>
-    <script src="js/login.js"></script>
+    <a href="/isegyeIdol-talk/index.html">이세계 아이돌 톡 템플릿</a>
   </body>
 </html>
