--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <a href="/isegyeIdol-talk/index.html">이세계 아이돌 톡 템플릿</a>
+    <a href="/music-talk/index.html">이세계 아이돌 톡 템플릿</a>
   </body>
 </html>
