--- a/music-talk/index.html
+++ b/music-talk/index.html
@@ -29,7 +29,7 @@
           <span>Music-Talk</span>
         </div>
         <div class="login-form">
-          <form action="/music-talk/friends.html" method="get" id="login-form">
+          <form action="friends.html" method="get" id="login-form">
             <input
               name="username"
               type="text"
