--- a/music-talk/friends.html
+++ b/music-talk/friends.html
@@ -56,40 +56,37 @@
         <div class="music-like__list">
           <div>
             <div>
-              <img src="/music-talk/img/singer/younha1.jpeg" alt="" />
+              <img src="img/singer/younha1.jpeg" alt="" />
             </div>
             <span>윤하</span>
           </div>
           <div>
             <div>
-              <img src="/music-talk/img/singer/day6-img1.jpeg" alt="" />
+              <img src="img/singer/day6-img1.jpeg" alt="" />
             </div>
             <span>DAY6</span>
           </div>
           <div>
             <div>
-              <img src="/music-talk/img/singer/N.flying-img1.jpeg" alt="" />
+              <img src="img/singer/N.flying-img1.jpeg" alt="" />
             </div>
             <span>N.flying</span>
           </div>
           <div>
             <div>
-              <img src="/music-talk/img/singer/LUCY-img1.jpeg" alt="" />
+              <img src="img/singer/LUCY-img1.jpeg" alt="" />
             </div>
             <span>LUCY</span>
           </div>
           <div>
             <div>
-              <img src="/music-talk/img/singer/isegyeidol-img1.png" alt="" />
+              <img src="img/singer/isegyeidol-img1.png" alt="" />
             </div>
             <span>이세계 아이돌</span>
           </div>
           <div>
             <div>
-              <img
-                src="/music-talk/img/singer/cherry-filter-img1.jpeg"
-                alt=""
-              />
+              <img src="img/singer/cherry-filter-img1.jpeg" alt="" />
             </div>
             <span>체리필터</span>
           </div>
@@ -277,7 +274,7 @@
         <li class="nav__btn center">
           <a class="nav__link" href="play.html">
             <div>
-              <img src="/music-talk/img/default.png" alt="" />
+              <img src="img/default.png" alt="" />
             </div>
           </a>
         </li>
