--- a/music-talk/music-list.html
+++ b/music-talk/music-list.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Play</title>
-    <link rel="stylesheet" href="/music-talk/css/screens/music.css" />
+    <link rel="stylesheet" href="css/screens/music.css" />
   </head>
   <body>
     <div class="playlist">
       <div class="playlist-background-img">
-        <img src="/music-talk/img/singer/younha1.jpeg" alt="" />
+        <img src="img/singer/younha1.jpeg" alt="" />
       </div>
       <header>
         <div class="status-bar">
@@ -180,7 +180,7 @@
             <div class="footer-button__play">
               <a class="nav__link" href="play.html">
                 <div>
-                  <img src="/music-talk/img/default.png" alt="" />
+                  <img src="img/default.png" alt="" />
                 </div>
               </a>
             </div>
