--- a/music-talk/play.html
+++ b/music-talk/play.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Play</title>
-    <link rel="stylesheet" href="/music-talk/css/screens/play.css" />
+    <link rel="stylesheet" href="css/screens/play.css" />
   </head>
   <body>
     <div class="play-music">
@@ -42,7 +42,7 @@
       <div class="play-music-main">
         <div class="play-music-main-title">
           <div class="play-music-main-title__img">
-            <img src="/music-talk/img/singer/younha1.jpeg" alt="" />
+            <img src="img/singer/younha1.jpeg" alt="" />
           </div>
           <div class="play-music-main-title__name">
             <i class="fa-regular fa-thumbs-down"></i>
@@ -81,7 +81,7 @@
             <div class="footer-button__play">
               <a class="nav__link" href="#">
                 <div>
-                  <img src="/music-talk/img/default.png" alt="" />
+                  <img src="img/default.png" alt="" />
                 </div>
               </a>
             </div>
