feat: 채팅 페이지 추가

--- a/music-talk/friends.html
+++ b/music-talk/friends.html
@@ -95,7 +95,10 @@
       <div class="main-screen__friends">
         <div class="main-screen__category">Friends</div>
         <div class="main-screen__friends-lists">
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -117,7 +120,10 @@
               <i class="fa-solid fa-play fa-2xs"></i>
             </div>
           </div>
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -139,7 +145,10 @@
               <i class="fa-solid fa-play fa-2xs"></i>
             </div>
           </div>
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -161,7 +170,10 @@
               <i class="fa-solid fa-play fa-2xs"></i>
             </div>
           </div>
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -183,7 +195,10 @@
               <i class="fa-solid fa-play fa-2xs"></i>
             </div>
           </div>
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -205,7 +220,10 @@
               <i class="fa-solid fa-play fa-2xs"></i>
             </div>
           </div>
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -227,7 +245,10 @@
               <i class="fa-solid fa-play fa-2xs"></i>
             </div>
           </div>
-          <div class="user-component">
+          <div
+            class="user-component"
+            onclick="javascript:location.href = 'chatting.html'"
+          >
             <div class="user-component__column">
               <img
                 class="user-component__avatar user-component__avatar--sm"
@@ -237,7 +258,7 @@
                 <h4
                   class="user-component__title user-component__title--not-bold"
                 >
-                  친구6
+                  친구7
                 </h4>
                 <h6 class="user-component__subtitle">
                   2,532,622 Monthly listeners
