--- a/music-talk/chatting.html
+++ b/music-talk/chatting.html
@@ -5,25 +5,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Isegye Idol Talk</title>
+    <title>Music Play</title>
   </head>
   <body class="chatting-screen">
     <div class="bg"></div>
     <div class="status-bar">
-      <!-- 폰으로 접속시 사라지는 것도 고려 -->
-      <div class="status-bar__column">
-        <span>No Service</span>
-        <i class="fa-solid fa-wifi"></i>
-      </div>
       <div class="status-bar__column">
         <span>15:49</span>
-        <!-- JS를 배우고나서 리얼 타임으로 변경도 고려 -->
       </div>
+      <div class="status-bar__column"></div>
       <div class="status-bar__column">
-        <i class="fa-solid fa-lock fa-xs"></i>
-        <span>10%</span>
+        <i class="fa-solid fa-signal fa-xs"></i>
+        <i class="fa-solid fa-wifi"></i>
         <i class="fa-solid fa-battery-quarter fa-lg"></i>
-        <i class="fa-solid fa-bolt fa-xs"></i>
       </div>
     </div>
 
@@ -37,10 +31,10 @@
 
     <header class="alt-header chatting-screen__header">
       <div class="alt-header__column">
-        <a href="chats.html"><i class="fa-solid fa-angle-left fa-2x"></i></a>
+        <a href="friends.html"><i class="fa-solid fa-angle-left fa-2x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__column-title">둘기</h1>
+        <h1 class="alt-header__column-title">친구6</h1>
       </div>
       <div class="alt-header__column">
         <i class="fa-solid fa-magnifying-glass fa-xl"></i>
@@ -50,15 +44,35 @@
 
     <main class="message-screen">
       <div class="message-screen__date">
-        <span>Sunday, Oct 09, 2022</span>
+        <span>Monday, Jan 16, 2023</span>
       </div>
       <div class="message-screen__other">
         <img src="img/default.png" />
         <div class="message-info">
-          <span class="message-info__name">둘기</span>
+          <span class="message-info__name">친구6</span>
           <div class="message-info__content">
-            <div class="message-info__content-bubble">안냥</div>
+            <div class="message-info__content-bubble">안녕하세요.</div>
             <span class="message-info__content-time">12:22</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-screen__other">
+        <img src="img/default.png" />
+        <div class="message-info">
+          <span class="message-info__name">친구6</span>
+          <div class="message-info__content">
+            <div class="message-info__content-bubble">
+              안녕하세요. 뮤직 톡에 오신걸 환영합니다.
+            </div>
+            <span class="message-info__content-time">12:23</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-screen__user">
+        <div class="message-info">
+          <div class="message-info__content">
+            <div class="message-info__content-bubble">넵 감사합니다.</div>
+            <span class="message-info__content-time">12:54</span>
           </div>
         </div>
       </div>
@@ -91,7 +105,5 @@
       src="https://kit.fontawesome.com/a4852596ef.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="js/time.js"></script>
-    <script defer src="js/chatting.js"></script>
   </body>
 </html>
