feat: 스플래시 추가

--- a/music-talk/friends.html
+++ b/music-talk/friends.html
@@ -310,6 +310,10 @@
       </p>
     </div>
 
+    <div class="loading">
+      <img src="img/YT_Music.svg.png" alt="" />
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a4852596ef.js"
       crossorigin="anonymous"
